# flights

./: .codespell-ignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  Dockerfile  LICENSE  MQTT_HTTP_API_DOCUMENTATION.md  Makefile  README.md  __init__.py  docker-compose.yml  docker-entrypoint.sh  docker_run_flights.sh  pyproject.toml  pytest.ini  requirements.txt
.dev-scripts/: format.sh  run.sh  test-tools.py  test.sh
.github/workflows/: ci.yml  code-quality.yml  docker-publish.yml
assets/.web/: dashboard.html
config/: config.docker.yaml  config.yaml  config.yaml.example  ha_mqtt_disc_payload.json  ha_mushroom_template.yaml  planefinder_dump_structure.json
data/: aircraft.json  airlines.json  airports.json  fr24_airlines_processed.json  ha_mqtt_device_discovery.json  planefinder_dump_structure.json
ha_automations/: flights_ads_b_receiver_recovery.yaml  flights_pfclient_check_after_saturday_window.yaml  flights_source_alert.yaml
ha_card/: ha_mushroom_popup.yaml
src/: config_manager.py  enrich_flight_info.py  flight_counts.py  flights.code-workspace  flights.py  flights_server.py  flights_server_module.py  ha_mqtt_discovery.py  mqtt_service.py  new_test.py
src/flights/: __init__.py  __main__.py  config.py  config_manager.py  counts.py  discovery.py  enrich_flight_info.py  enricher.py  flights_main.py  flights_server.py  ha_mqtt_discovery.py  hex_lookup.py  logo_resolver.py  mqtt_client.py  mqtt_service.py  server.py
tests/: conftest.py  test_config.py  test_counts.py  test_discovery.py  test_enricher.py  test_integration.py  test_server.py
unraid/: flights.xml
