[project]
name = "flights"
version = "0.1.0"
description = "Enriches flight data from ADS-B available with MQTT and HTTP API, suitable for integration with Home Assistant"
authors = [
    {name = "ronschaeffer",email = "ron@ronschaeffer.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "shapely (>=2.0.6,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "flydenity (>=0.1.6,<0.2.0)",
    "airportsdata (>=20241001,<20241002)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120
extend-exclude = [
    "assets",
    "logs",
    "output",
    "storage",
    "dev_tools",
    "data",
]

[tool.ruff.lint]
select = [
    "A001",   # Variable {name} is shadowing a Python builtin
    "B002",   # Python does not support the unary prefix increment
    "B005",   # Using .strip() with multi-character strings is misleading
    "B007",   # Loop control variable {name} not used within loop body
    "B009",   # Do not call getattr with a constant attribute value
    "B014",   # Exception handler with duplicate exception
    "B015",   # Pointless comparison. Did you mean to assign a value?
    "B017",   # pytest.raises(BaseException) should be considered evil
    "B018",   # Found useless attribute access
    "B023",   # Function definition does not bind loop variable {name}
    "B026",   # Star-arg unpacking after a keyword argument is strongly discouraged
    "B032",   # Possible unintentional type annotation (using :)
    "B904",   # Use raise from to specify exception cause
    "B905",   # zip() without an explicit strict= parameter
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "F541",   # f-string without any placeholders
    "I",      # isort
    "N804",   # First argument of a class method should be named cls
    "N805",   # First argument of a method should be named self
    "N815",   # Variable {name} in class scope should not be mixedCase
    "UP",     # pyupgrade
]

ignore = [
    "C901",     # complex-structure (too strict for this project)
    "E501",     # line too long (handled by formatter)
    "B",        # Keep existing B rules from original select
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert (normal in tests)
    "S104",     # hardcoded-bind-all-interfaces (needed for web services)
    "S105",     # hardcoded-password-string (test passwords are OK)
    "S110",     # try-except-pass (sometimes appropriate)
    "S607",     # start-process-with-partial-path (git commands are expected)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.codespell]
skip = "*.json,*.pyc,__pycache__,*.git,*.svg,data/*,assets/*"
ignore-words-list = "aer,aci,adn,aer,ane,anm,ans,bu,cna,fle,fo,hda,lke,meraj,nam,nin,nax,rouge,seh,te,tha,tht,ue,voz"
